templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pypi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-born
spec:
  rules:
    - host: pypi.bjoernpetersen.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pypi
                port:
                  name: http
  tls:
    - secretName: tls-certificate
      hosts:
        - pypi.bjoernpetersen.net
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pypi-bs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
    - host: pypi.blindfolded.surgery
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pypi
                port:
                  name: http
  tls:
    - secretName: tls-certificate-bs
      hosts:
        - pypi.blindfolded.surgery
